--- a/DanfeSharp.App/MainWindow.xaml
+++ b/DanfeSharp.App/MainWindow.xaml
@@ -26,7 +26,7 @@
         <Button Grid.Column="1" Grid.Row="4" Click="Button_Click_1" Content="..." ToolTip="Procurar logotipo" />
 
         <Button x:Name="BGerarDanfe" Grid.ColumnSpan="2" Grid.Row="5" Margin="0,10,0,0" HorizontalAlignment="Left" Padding="5" Click="BGerarDanfe_Click" Content="Gerar DANFE" />
-        <TextBlock x:Name="Navi" Grid.ColumnSpan="2" Grid.Row="5" HorizontalAlignment="Right" VerticalAlignment="Bottom" ToolTip="Visite o site do aplicativo"><Hyperlink  NavigateUri="http://danfesharp.codeplex.com" RequestNavigate="Hyperlink_RequestNavigate" ><Run Text="http://danfesharp.codeplex.com" /></Hyperlink></TextBlock>
+        <TextBlock x:Name="Navi" Grid.ColumnSpan="2" Grid.Row="5" HorizontalAlignment="Right" VerticalAlignment="Bottom" ToolTip="Visite o site do aplicativo"><Hyperlink  NavigateUri="https://github.com/SilverCard/DanfeSharp" RequestNavigate="Hyperlink_RequestNavigate" ><Run Text="https://github.com/SilverCard/DanfeSharp" /></Hyperlink></TextBlock>
 
     </Grid>
 </Window>
